@@ -1,3 +1,7 @@
+- Added support for decrypting encrypted topics. As of now no visible feedback exists, though.
+- Added /encTopic command to set an encrypted topic.
+- Added /aboutFiSHy command.
+
 0.3.0       2007/03/15
 - Made FiSHy localizable.
 - Fixes a crash after a key-exchange timed out.
